--- a/component-web/src/main/resources/system.properties
+++ b/component-web/src/main/resources/system.properties
@@ -1,28 +1,28 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 #promo3
-jdbc.promo3.url=jdbc:mysql://123.56.109.26:3306/sys?useUnicode=true&autoReconnect=true&rewriteBatchedStatements=TRUE
-jdbc.promo3.username=admin
-jdbc.promo3.password=Rtmap2015
+jdbc.promo3.url=jdbc:mysql://127.0.0.1:3306/sys?useUnicode=true&autoReconnect=true&rewriteBatchedStatements=TRUE
+jdbc.promo3.username=root
+jdbc.promo3.password=123456
 
 #LOCAL
-jdbc.url=jdbc:mysql://182.92.3.90:3306/component
+jdbc.url=jdbc:mysql://127.0.0.1:3306/component
 jdbc.username=root
-jdbc.password=rtmap(!!
+jdbc.password=123456
 
 #memcached
-memcache.url=123.56.103.28:11211
+memcache.url=127.0.0.1:11211
 
 # component account
-component.appid=wx40c25aaa171ae8aa
-component.appsecret=4eac638b5107e18d0e5b698674810cce
+component.appid=appid
+component.appsecret=appsecret
 component.token=259EDED6DC804F118EA53292028F74EA
 component.encodingkey=MjU5RURFRDZEQzgwNEYxMThFQTUzMjkyMDI4Rjc0RUE
 #授权事件接收URL	verify_ticket,授权通知
-component.oauth=http://dev.rtmap.com/component-web/auth/notify
+component.oauth=http://dev.muarine.com/component-web/auth/notify
 #授权后回调URI
-callback.login.oauth=http://dev.rtmap.com/component-web/auth/index
+callback.login.oauth=http://dev.muarine.com/component-web/auth/index
 # Domain
-domain=http://dev.rtmap.com/component-web
+domain=http://dev.muarine.com/component-web
 
 # mq push address
 mq.address=http://xxx.xxx.xxx.xx/mq/create
