--- a/component-web/src/main/resources/system.properties
+++ b/component-web/src/main/resources/system.properties
@@ -1,15 +1,9 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-#promo3
-jdbc.promo3.url=jdbc:mysql://127.0.0.1:3306/sys?useUnicode=true&autoReconnect=true&rewriteBatchedStatements=TRUE
-jdbc.promo3.username=root
-jdbc.promo3.password=123456
-
-#LOCAL
-jdbc.url=jdbc:mysql://127.0.0.1:3306/component
+jdbc.url=jdbc:mysql://localhost:3306/component
 jdbc.username=root
 jdbc.password=123456
 
-#memcached
+# memcached
 memcache.url=127.0.0.1:11211
 
 # component account
@@ -17,12 +11,9 @@ component.appid=appid
 component.appsecret=appsecret
 component.token=259EDED6DC804F118EA53292028F74EA
 component.encodingkey=MjU5RURFRDZEQzgwNEYxMThFQTUzMjkyMDI4Rjc0RUE
-#授权事件接收URL	verify_ticket,授权通知
+#\u6388\u6743\u4E8B\u4EF6\u63A5\u6536URL	verify_ticket,\u6388\u6743\u901A\u77E5
 component.oauth=http://dev.muarine.com/component-web/auth/notify
-#授权后回调URI
+#\u6388\u6743\u540E\u56DE\u8C03URI
 callback.login.oauth=http://dev.muarine.com/component-web/auth/index
 # Domain
 domain=http://dev.muarine.com/component-web
-
-# mq push address
-mq.address=http://xxx.xxx.xxx.xx/mq/create
