迁移 资源配置文件到common-core统一管理

--- a/component-web/pom.xml
+++ b/component-web/pom.xml
@@ -184,6 +184,11 @@
 			<artifactId>mail</artifactId>
 			<version>${mail.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.rtmap</groupId>
+			<artifactId>common-config</artifactId>
+			<version>${env}-${common-config.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>component-web</finalName>
