统一以Test作为后缀的单元测试文件名命名规范

--- a/component-test/pom.xml
+++ b/component-test/pom.xml
@@ -61,7 +61,7 @@
 			    <configuration>
 			    	<includes>  
 	                    <!--包含所有后缀为Test.jave的类  -->
-	                    <include>**/Test*.java</include>  
+	                    <include>**/*Test.java</include>
 	                </includes> 
 	               <skip>true</skip>
 			    </configuration>  
